--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "lowdb": "^0.13.1",
     "method-override": "^2.1.2",
     "morgan": "^1.3.1",
-    "node-uuid": "^1.4.2",
     "object-assign": "^4.0.1",
     "pluralize": "^3.0.0",
     "request": "^2.72.0",
     "server-destroy": "^1.0.1",
     "underscore-db": "^0.10.0",
     "update-notifier": "^1.0.2",
+    "uuid": "^3.0.0",
     "yargs": "^4.2.0"
   },
   "devDependencies": {
